--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-#expense {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+.img {
+  fill-opacity: inherit;
 }
-
-#whatTheyBought {
-
-}
-
