--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 h1 {
   text-align: center;
-  color: darkgray;
+  color: black;
 }
 
 #startingBudget {
@@ -14,7 +14,7 @@ h1 {
   color: aquamarine;
 }
 form {
-  color: burlywood;
+  color: whitesmoke;
   font-size: large;
 }
 
@@ -24,29 +24,71 @@ form {
   flex-direction: row;
   justify-content: space-between;
   margin: 20px;
+  align-items: center;
+}
+
+.itemContainer {
+  border: 1px solid aquamarine;
+  border-radius: 20px;
 }
 
 #expense {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  color: yellow;
-  border: 2px solid #eee;
+  color: white;
+  border-bottom: 2px solid #eee;
 }
 
 input {
   background-color: white;
   padding: 5px;
   margin: 5px 0;
+  border-radius: 0px;
 }
-#purchases {
-  background-color: cyan;
+.inputButton {
+  border-radius: 10px;
+  padding: 6px;
 }
-div {
-  padding: 3em;
-  border-radius: 20;
 
-  box-shadow: 20px 20px 40px -6px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  position: relative;
+.bar-container {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  justify-content: center;
+  padding: 50px;
+}
+.progress {
+  background-color: #d8d8d8;
+  height: 30px;
+  width: 100%;
+  border-radius: 20px;
+}
+
+.progress-done {
+  background: linear-gradient(to right, aquamarine, teal);
+  box-shadow: 0 3px 3px -5px aquamarine, 0 2px 5px teal;
+  border-radius: 20px;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  width: 0;
+  display: flex;
+  justify-content: center;
+}
+
+#whatTheyBought {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+  flex-wrap: wrap;
+  color: white;
+}
+
+#whatTheyBought > div {
+  padding: 10px;
+}
+
+ul {
+  list-style: none;
 }
